@startuml STLA_Proxy_Pattern
title STLA Desktop — Proxy Pattern
skinparam classAttributeIconSize 0

package "com.stla.patterns.proxy" {
  class CourseAccessProxy <<Proxy>> {
    - enrollmentService: EnrollmentService
    + canAccessLesson(studentId, courseId, lesson): boolean
    + canAccessQuizzes(studentId, courseId): boolean
    + canDownloadResources(studentId, courseId): boolean
    + getLockMessage(): String
    + getQuizLockMessage(): String
  }

  class AccessControlProxy <<Proxy>> {
    + canAccess(screen): boolean
    + isOwner(resourceOwnerId): boolean
    + canManageCourse(courseInstructorProfileId): boolean
  }

  note as NMissing
    **InstructorAccessProxy** — Class not found in current codebase

    **AdminAccessProxy** — Class not found in current codebase
  end note

  note bottom of AccessControlProxy
    AccessControlProxy is defined but has **no**
    references outside its source file (manual review).
  end note
}

CourseAccessProxy --> EnrollmentService
CourseAccessProxy ..> CourseLesson

AccessControlProxy ..> SessionManager

package "com.stla.services" {
  class EnrollmentService
}

package "com.stla.domain.models" {
  class CourseLesson
}

package "com.stla.core.session" {
  class SessionManager <<Singleton>>
}

package "com.stla.ui.student" {
  class StudentCoursePlayerController
}

package "com.stla.services" {
  class QuizService
}

StudentCoursePlayerController --> CourseAccessProxy
QuizService --> CourseAccessProxy

note right of CourseAccessProxy
  Proxy controls access to lessons/quizzes
  based on enrollment and preview flag
  without duplicating checks in every controller.
end note

@enduml
